# IMAC_S4_prog

./: .clang-format  .gitignore  CMakeLists.txt
assets/: anchor.mtl  fish.mtl
assets/models/: ClownFish.mtl  ClownFish_Low.mtl  Dory.mtl  Dory_Low.mtl  SeaWeed.mtl  Turtle.mtl  anchor.mtl  fish.mtl  nemo_girl.mtl  world.mtl
shaders/: 3D.vs.glsl  boids.fs.glsl  boids.vs.glsl  fade.fs.glsl  fade.vs.glsl  fish.fs.glsl  greenSphere.fs.glsl  greenSphere.vs.glsl  instancedObject.vs.glsl  normals.fs.glsl  singleObject.vs.glsl  texture.fs.glsl
src/: MarkovChain.cpp  MarkovChain.h  boid.cpp  boid.h  camera.cpp  camera.h  file_utils.cpp  file_utils.h  main.cpp  maths.cpp  maths.h  mesh.cpp  mesh.h  object3D.cpp  object3D.h  obstacle.h  random_utils.cpp  random_utils.h  renderer.cpp  renderer.h  rendering.cpp  rendering.h  vertexData.h  window.cpp  window.h
src/openGL/: arrays.cpp  arrays.h  objects.cpp  objects.h  program.cpp  program.h
